--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,20 @@ main{
     width: 400px;
     height: 400px;
     border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box{
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.active{
+    background-color: #6495ed;
+    color: white;
 }
 
 
