Aggiunta proprietà Pointer

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    user-select: none;
 }
 
 .active{
